# kalkulatoraljabar

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST_COMPLETE.md  CHECKLIST_STATUS.md  CONTRIBUTING.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FUNCTION_FINDER_IMPROVEMENT_ROADMAP.md  FUNCTION_FINDING_ALGORITHMS.md  GITHUB_FILES_LIST.md  GITHUB_REPOSITORY_CONTENTS.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  ONBOARDING.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  SECURITY.md  __init__.py  cli.py  config.py  extract_and_decompile_nested.py  fuzz_test.py  kalkulator.py  kalkulator.spec  kalkulator_FromTheDead.py  parser.py  pyproject.toml  qodana.yaml  random_test_generator.py  rebuild_kalkulator_from_nested.py  requirements-dev.txt  requirements.txt  run_formatting_tools.ps1  subprocess_SafeEvaluation_API.py  test_advanced_function_finder.py  (+12 more)
.github/workflows/: ci.yml
docs/: GITHUB_CHECKLIST.md  PROJECT_ORGANIZATION.md  WORKER_SUBPROCESS_FALLBACK.md
docs/archive/: ABSOLUTE_FINAL_STATUS.md  ACCEPTANCE_CRITERIA.md  AUDIT_CHECKLIST.md  CHECKLIST_100_COMPLETE.md  CHECKLIST_100_ITEMS.md  COMPLETION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS.md  PATH_TO_100_PERCENT.md  QUICK_START_TO_100.md  REFACTOR_STATUS.md  SETUP_COMPLETE.md  STATUS_ARCHIVE.md
docs/status/: CODE_REVIEW_TODO.md  FINAL_TODO_COMPLETION_SUMMARY.md  GITHUB_FILES_LIST.md  PROGRESS_UPDATE.md  REMAINING_PROGRESS_SUMMARY.md  REMAINING_TODO_SUMMARY.md  TODO_COMPLETION_REPORT.md  TODO_COMPLETION_SUMMARY.md  TODO_FINAL_STATUS.md  TODO_REVIEW_FINDINGS.md
kalkulator_pkg/: __init__.py  __main__.py  abpn.py  api.py  cache_manager.py  calculus.py  cli.py  config.py  function_finder_advanced.py  function_manager.py  logging_config.py  parser.py  plotting.py  solver.py  types.py  worker.py
tests/: __init__.py  test_api_typed_returns.py  test_calculus.py  test_comprehensive.py  test_error_codes.py  test_failure_modes.py  test_fuzzing.py  test_integration.py  test_integration_cli.py  test_parser.py  test_performance.py  test_solver.py  test_solver_handlers.py  test_windows_specific.py
